@@ -5,10 +5,8 @@
    */
 
 PHPWS_Core::initModClass('controlpanel', 'ControlPanel.php');
+PHPWS_Core::initModClass('controlpanel', 'Tab.php');
+PHPWS_Core::initModClass('controlpanel', 'Link.php');
 
-if (isset($_REQUEST['module']) && $_REQUEST['module'] == 'controlpanel') {
-    PHPWS_Core::initModClass('controlpanel', 'Tab.php');
-    PHPWS_Core::initModClass('controlpanel', 'Link.php');
- }
 
 ?>
